Fix ExtJs menu margin, otherwise the normalize.css adds too much margin to this component

--- a/web-client/src/main/resources/apps/geocatch/css/main.css
+++ b/web-client/src/main/resources/apps/geocatch/css/main.css
@@ -493,3 +493,8 @@ div.facets * .facet-more-bt,div.facets * .facet-less-bt {
 	background-repeat: no-repeat;
 	padding-left: 15px;
 }
+
+/* Fix ExtJs menu margin, otherwise the normalize.css adds too much margin to this component */
+ul.x-menu-list {
+    margin: 0px;
+}
